# cembrowski_lab_final_pipeline

./: ARCHITECTURE.md  README.md  pyproject.toml
scripts/: run_new_recording.py  run_pipeline.py
src/calcium_core/: __init__.py
src/calcium_core/clustering/: __init__.py  crosscorr.py  hierarchical.py
src/calcium_core/core/: __init__.py  config.py  models.py  paths.py  recording.py  suite2p_runner.py
src/calcium_core/detection/: __init__.py  boundaries.py  density.py  events.py  onsets.py  per_roi.py
src/calcium_core/io/: __init__.py  metadata.py  suite2p.py
src/calcium_core/ml/: __init__.py  config.py  dataset.py  logistic_scorer.py  model.py  predict.py  train.py
src/calcium_core/pipeline/: __init__.py  analyze.py  email_alerts.py  progress.py  runner.py  steps.py  workflow.py
src/calcium_core/reduction/: __init__.py  pca.py  umap.py
src/calcium_core/signal/: __init__.py  filters.py  normalize.py  spectral.py  spikes.py
src/calcium_core/spatial/: __init__.py  heatmap.py  heatmap_legacy.py  metrics.py  vectors.py
src/calcium_core/utils/: __init__.py  logging.py  system.py
src/calcium_core/viz/: __init__.py  events.py  summary.py
src/calcium_pipeline/cellfilter/: __init__.py  dataset.py  model.py  predict.py  train.py
src/calcium_pipeline/config/: __init__.py  aav_table.py  defaults.py  paths.py  schema.py
src/calcium_pipeline/core/: __init__.py  events.py  logging.py  signal.py  spatial.py
src/calcium_pipeline/gui/: __init__.py  app.py  bus.py  console.py  stage_panel.py  worker.py
src/calcium_pipeline/io/: __init__.py  memmap.py  (+2 more)
(+20 files in other folders)
